--- a/adm/style/jquery.autocomplete.css
+++ b/adm/style/jquery.autocomplete.css
@@ -3,7 +3,7 @@
 	background-color: #FFFFFF;
 	border: 1px solid #c0c0c0 !important;;
 	color: #333333;
-	padding: 2px 2px 2px 17px !important;
+	padding: 2px 2px 2px 17px;
 	cursor: text;
 	color: #999999;
 	background-position: 0 center;
