Add live search in acp

--- a/styles/all/template/event/overall_footer_after.html
+++ b/styles/all/template/event/overall_footer_after.html
@@ -1,6 +1,7 @@
 <script type="text/javascript" >
     var S_FORUM_ID = '{S_FORUM_ID}';
     var S_TOPIC_ID = '{S_TOPIC_ID}';
+    var S_CANONICAL_TOPIC_TYPE = '{S_CANONICAL_TOPIC_TYPE}';
     var minChars_forum = '{MIN_CHARS_FORUM}';
 
     var U_FORUM_LS_PATH = '{U_FORUM_LS_PATH}';
@@ -37,12 +38,12 @@
     var S_SIMILARTOPIC_SHOW = '{S_SIMILARTOPIC_SHOW}';
 
 </script>
-<!-- INCLUDEJS jquery.autocomplete.js -->
-<!-- INCLUDEJS hoverIntent.minified.js -->
+<!-- INCLUDEJS @alg_liveSearch/jquery.autocomplete.js -->
+<!-- INCLUDEJS @alg_liveSearch/hoverIntent.minified.js -->
 <!-- IF LIVE_SEARCH_USE_EYE_BUTTON --> 
-    <!-- INCLUDEJS ../jquery.eye/jquery.eye.js -->
-    <!-- INCLUDECSS ../jquery.eye/jquery.eye.css -->
+    <!-- INCLUDEJS @alg_liveSearch/../jquery.eye/jquery.eye.js -->
+    <!-- INCLUDECSS @alg_liveSearch/../jquery.eye/jquery.eye.css -->
 <!-- ENDIF  -->
-<!-- INCLUDEJS live_search.js -->
+<!-- INCLUDEJS @alg_liveSearch/live_search.js -->
 
  
