--- a/styles/all/template/event/overall_header_head_append.html
+++ b/styles/all/template/event/overall_header_head_append.html
@@ -1,4 +1,6 @@
-<!-- INCLUDECSS ../theme/jquery.autocomplete.css -->
-<!-- INCLUDECSS ../theme/live_search.css -->
-<!-- INCLUDECSS ../jquery.eye/jquery.eye.css -->
+
+<!-- INCLUDECSS @alg_liveSearch/jquery.autocomplete.css -->
+<!-- INCLUDECSS @alg_liveSearch/live_search.css -->
+<!-- INCLUDECSS @alg_liveSearch/../jquery.eye/jquery.eye.css -->
+
 
