--- a/styles/all/template/event/overall_footer_after.html
+++ b/styles/all/template/event/overall_footer_after.html
@@ -34,9 +34,16 @@
     var LIVE_SEARCH_USE_EYE_BUTTON = '{LIVE_SEARCH_USE_EYE_BUTTON}';
     var LIVE_SEARCH_EYE_BUTTON_OPEN_T = '{LIVE_SEARCH_EYE_BUTTON_OPEN_T}';
     var LIVE_SEARCH_EYE_BUTTON_CLOSE_T = '{LIVE_SEARCH_EYE_BUTTON_CLOSE_T}';
+    var LIVE_SEARCH_HIDE_AFTER_SELECT = '{LIVE_SEARCH_HIDE_AFTER_SELECT}';
 
+    //MCP
+    var L_LIVESEARCH_USER_T = '{L_LIVESEARCH_USER_T}';
+    var LIVE_SEARCH_MAX_ITEMS_TO_SHOW_MCP = '{LIVE_SEARCH_MAX_ITEMS_TO_SHOW_MCP}';
+    var LIVE_SEARCH_MIN_NUM_SYMBLOLS_USER_MCP = '{LIVE_SEARCH_MIN_NUM_SYMBLOLS_USER_MCP}';
     var S_SIMILARTOPIC_SHOW = '{S_SIMILARTOPIC_SHOW}';
-
+    var S_LIVESEARCH_MCP = '{S_LIVESEARCH_MCP}';
+    var MCP_POST_DETAILS = '{MCP_POST_DETAILS}';
+ //   alert('LIVE_SEARCH_HIDE_AFTER_SELECT = ' + LIVE_SEARCH_HIDE_AFTER_SELECT);
 </script>
 <!-- INCLUDEJS @alg_liveSearch/jquery.autocomplete.js -->
 <!-- INCLUDEJS @alg_liveSearch/hoverIntent.minified.js -->
