--- a/styles/all/template/event/posting_pm_header_find_username_after.html
+++ b/styles/all/template/event/posting_pm_header_find_username_after.html
@@ -1,4 +1,4 @@
- <!-- IF S_LIVE_SEARCH  || true--> 
+ <!-- IF LIVE_SEARCH_ON_OFF_USER--> 
  <br />
  {L_LIVE_SEARCH_CAPTION}{L_COLON} 
     <div id='leavesearch_pm' style='display:inline-block' >
