--- a/styles/all/jquery.eye/jquery.eye.css
+++ b/styles/all/jquery.eye/jquery.eye.css
@@ -3,7 +3,7 @@
     background-image: url("../jquery.eye/images/show-hide.png");
 	cursor: pointer; 
 	position: fixed; 
-	top: 14px; 
+	top: 24px; 
 	width:14px; 
 	height:14px; 
 	z-index :12;
@@ -13,4 +13,10 @@
 }
 .eye_btn_close {
     background-position:  0 0;
+}
+@media 
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  
+{
+        .eye_btn {right:2px;}
 }
