--- a/styles/all/theme/live_search.css
+++ b/styles/all/theme/live_search.css
@@ -80,11 +80,27 @@
     filter:alpha(opacity=30); 
 }
 
-@media only screen and (max-width: 700px)
+/*@media only screen and (max-width: 700px)
 , only screen and (max-device-width: 700px) 
 {
     #leavesearch_btn
 	{
 		display:none;
+    }
+}*/
+@media 
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  
+{   #leavesearch
+    {
+        height:auto;
+    }
+    #leavesearch lable 
+    {
+	    display:block;
+    }
+    #leavesearch input 
+    {
+	    width:140px;
     }
 }
