--- a/styles/all/jquery.eye/jquery.eye.css
+++ b/styles/all/jquery.eye/jquery.eye.css
@@ -1,16 +1,15 @@
 .eye_btn 
 {
-    background-image: url("../jquery.eye/images/show-hide.png");
 	cursor: pointer; 
 	position: fixed; 
-	top: 14px; 
-	width:14px; 
-	height:14px; 
+	top: 24px; 
+	font-size:18px;
 	z-index :12;
 }
-.eye_btn_open {
-    background-position:  0 14px;
+@media 
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  
+{
+        .eye_btn {right:2px;}
 }
-.eye_btn_close {
-    background-position:  0 0;
-}
+
