--- a/styles/all/template/event/overall_footer_after.html
+++ b/styles/all/template/event/overall_footer_after.html
@@ -7,7 +7,7 @@
     var U_FORUM_LS_PATH = '{U_FORUM_LS_PATH}';
     var U_TOPIC_LS_PATH = '{U_TOPIC_LS_PATH}';
     var U_SIMILARTOPIC_LS_PATH = '{U_SIMILARTOPIC_LS_PATH}';
-    var U_USER_LS_PATH  = '{U_USER_LS_PATH}';
+    var U_USER_LS_PATH = '{U_USER_LS_PATH}';
     var U_USERTOPIC_LS_PATH = '{U_USERTOPIC_LS_PATH}';
     var U_USERPOST_LS_PATH = '{U_USERPOST_LS_PATH}';
     var U_USER_PM_LS_PATH = '{U_USER_PM_LS_PATH}';
@@ -18,11 +18,11 @@
     var U_PM_LS_PATH = '{U_PM_LS_PATH}';
     var U_MAIL_LS_PATH = '{U_MAIL_LS_PATH}';
     var U_JABBER_LS_PATH = '{U_JABBER_LS_PATH}';
-   
-   
+
+
     var U_FORUM_REDIRECT = '{U_FORUM_REDIRECT}';
     var U_TOPIC_REDIRECT = '{U_TOPIC_REDIRECT}';
-    
+
     var minChars_topic = '{MIN_CHARS_TOPIC}';
     var minChars_user = '{MIN_CHARS_USER}';
 
@@ -37,13 +37,19 @@
     var LIVE_SEARCH_HIDE_AFTER_SELECT = '{LIVE_SEARCH_HIDE_AFTER_SELECT}';
 
     //MCP
+    var L_LIVE_SEARCH_YOU_SELECTED_TOPIC = '{L_LIVE_SEARCH_YOU_SELECTED_TOPIC}';
+    var L_LIVESEARCH_USER_TXT = '{L_LIVESEARCH_USER_TXT}';
     var L_LIVESEARCH_USER_T = '{L_LIVESEARCH_USER_T}';
     var LIVE_SEARCH_MAX_ITEMS_TO_SHOW_MCP = '{LIVE_SEARCH_MAX_ITEMS_TO_SHOW_MCP}';
     var LIVE_SEARCH_MIN_NUM_SYMBLOLS_USER_MCP = '{LIVE_SEARCH_MIN_NUM_SYMBLOLS_USER_MCP}';
     var S_SIMILARTOPIC_SHOW = '{S_SIMILARTOPIC_SHOW}';
     var S_LIVESEARCH_MCP = '{S_LIVESEARCH_MCP}';
     var MCP_POST_DETAILS = '{MCP_POST_DETAILS}';
- //   alert('LIVE_SEARCH_HIDE_AFTER_SELECT = ' + LIVE_SEARCH_HIDE_AFTER_SELECT);
+    var MCP_USER_NOTES = '{MCP_USER_NOTES}';
+    var MCP_BAN = '{MCP_BAN}';
+    var MCP_TOPIC_VIEW = '{MCP_TOPIC_VIEW}';
+    var MCP_TOPIC_MOVE = '{MCP_TOPIC_MOVE}';
+    //alert(MCP_TOPIC_MOVE);
 </script>
 <!-- INCLUDEJS @alg_liveSearch/jquery.autocomplete.js -->
 <!-- INCLUDEJS @alg_liveSearch/hoverIntent.minified.js -->
